--- a/artistProfile.html
+++ b/artistProfile.html
@@ -15,7 +15,7 @@
     <nav class="complete-nav-bar">
         <div class="nav-bar-proper">
             <div id="icon-text">
-                <a href="musicplayerweb.html" >
+                <a href="index.html" >
                 <div class="m-icon-ni-studio">
                     <span><i class="fa-solid fa-music"></i></span>
                     <div id="ninja-studio"><span id="ninja"> Ninja </span> <br> <span id="studio">Studio</span></div>
